--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "baylang/core": "^1.0.0"
+        "baylang/core": "1.0.0"
     },
     "autoload": {
         "psr-4": {
